<resources>
    <string name="app_name">Hangover</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_share">AGB/Datenschutz</string>
    <string name="menu_send">Impressum</string>
    <string name="events">Events</string>
    <string name="locations">Locations</string>
    <string name="map">Map</string>
    <string name="pers_nlicher_bereich">Persönlicher Bereich</string>
    <string name="rechtliches">Rechtliches</string>

    <string name="title_activity_locations">Locations</string>
    <string name="textview">TextView</string>
    <string name="placeholder">Hier könnte Ihre Info stehen.</string>
    <string name="placeholder2">Hier könnten Ihre Öffnungszeiten stehen.</string>

    <string name="title_activity_loading_screen">LoadingScreen</string>
    <string name="gespeicherte_veranstaltungen">Gespeicherte Veranstaltungen:</string>
    <string name="initialisiere_saufdatenbank">Initialisiere Bierdatenbank…</string>
    <string name="call_a_taxi">Call a Taxi</string>
    <string name="taxiunternehmen">Taxiunternehmen</string>
    <string name="zur_info">Infos</string>
    <string name="events_of_location">Events</string>
    <string name="kostenlos">kostenlos</string>
    <string name="pers_area">Persönlicher Bereich</string>
    <string name="law">AGB\'s / Datenschutz</string>
    <string name="impressum">Impressum</string>
    <string name="taxi">Call a Taxi</string>
    <string name="headline_ofevent_detail">Headline</string>
    <string name="date_of_event_detail">Date</string>
    <string name="location">Location</string>
    <string name="details_zum_event">Details zum Event</string>
    <string name="musik">Musik</string>
    <string name="eintrittspreis">Eintrittspreis</string>
    <string name="headline">Headline</string>
    <string name="adress">Address</string>
    <string name="bewertungen">Bewertungen</string>
    <string name="agb_s">AGB\'s</string>
    <string name="preisliste">Preisliste</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="line_3">Line 3</string>
    <string name="_0">0€</string>
    <string name="art_der_location">Art der Location</string>
    <string name="music">Music</string>
    <string name="filter">Filter</string>
    <string name="buchstabe">Buchstabe</string>
    <string name="locationbeschreibung">Locationbeschreibung</string>
    <string name="ffnungszeiten">Öffnungszeiten</string>
    <string name="line_1_loc_item">Line 1</string>
    <string name="zero_stars">0</string>
    <string name="line_2_loc_item">Line 2</string>
    <string name="line_3_loc_item">Line 3</string>
    <string name="l_schen">Löschen</string>
    <string name="speichern">Speichern</string>
    <string name="sag_uns_deine_meinung_zu_dieser_location">Sag uns deine Meinung zu dieser Location!</string>
    <string name="deine_meinung">Deine Meinung…</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="absenden">Absenden</string>
    <string name="bewertungsdatum">Bewertungsdatum</string>
    <string name="bwertung_text">bwertung text</string>
    <string name="diese_location_wurde_von_x_user_bwertet">Diese Location wurde von X User bwertet</string>
    <string name="details_taxi">Details…</string>
    <string name="club">Club</string>
    <string name="bar">Bar</string>
    <string name="sonstige">Sonstige</string>
</resources>